--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,14 +149,12 @@ section {
   font-size: 55px;
   color: #024e76;
   margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 /*What we do section - styling*/
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -164,11 +162,11 @@ section {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
 
 /*What you do section styling*/
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -198,7 +196,6 @@ section {
 
 /*Meet the trainers - styling*/
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -220,14 +217,6 @@ section {
   width: 65%;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -247,7 +236,6 @@ section {
 /*Reach out to us - section - styling*/
 .contact {
   background-color: #024e76;
-  text-align: center;
 }
 
 .contact h2 {
@@ -285,3 +273,15 @@ section {
   color: #fce138;
 }
 /* REACH OUT STLE ENDS*/
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.flex-row {
+  display: flex;
+}
